// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render 1`] = `
<div
  className="ow-icon"
  fill="currentColor"
/>
`;

exports[`Button render diff name 1`] = `
<div
  class="ow-icon"
  fill="currentColor"
/>
`;

exports[`Button render null 1`] = `null`;

exports[`Button render styled 1`] = `
<div
  className="ow-icon"
  fill="currentColor"
  style={
    Object {
      "color": "white",
      "height": 30,
    }
  }
/>
`;
